syntax = "proto3";

package pd;

// 通信包
message Message{
  uint32 Id = 1;
  string ClientId = 2;//客户端ID
  uint32 ConnId =3;//连接ID
  string ServerId =4;//服务器ID
  uint32 MsgId = 5;
  uint32 DataLen=6;//数据包长度
  bytes  Data = 7;//数据包

}